# fort2pyconverter-

./: LICENSE  README.md  pyproject.toml
docs/: architecture.md  limitations.md  migration.md  usage.md
sample/: run.yaml
src/fort2py/: cli.py  codegen_python.py  converter.py  fortran_parser.py  fortran_runner.py  gui_app.py  harness.py  intrinsics.py  ir.py  migration_notes.py  package_builder.py  scanner.py  semantics.py  testgen.py  types.py  utils.py
tests/: test_intrinsics.py  test_parser_codegen.py  test_types.py
